# xdg-desktop-entries

./: Cargo.toml  shell.nix
src/: lib.rs
