[package]
name = "xdg-desktop-entries"
version = "0.1.1"
edition = "2024"
license = "GPL-2.0-or-later"
description = "A simple parser for xdg/freedesktop desktop entries"
keywords = ["linux", "desktop", "freedesktop", "xdg", "entry"]
categories = ["parser-implementations"]
repository = "https://github.com/OmegaMetor/xdg-desktop-entries"